2009-04-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Support alternative iconv implemetations.
	[Thanks cwt for the report.]

	* configure.ac: Check for GNU libconv or native libiconv if system libc
	doesn't have iconv().
	* tools/Makefile.am: Add ICONV_LIBS to linker options.

2009-04-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fall back to libtool for linkers that do not support -version-script.
	[Thanks bact' for the report. Thanks cwt for the test.]

	* configure.ac: Check whether linker supports -version-script.
	* datrie/Makefile.am, +datrie/libdatrie.def:
	Apply -version-script flag only when linker supports it. Otherwise,
	fall back to the old method based on libtool -export-symbols flag.

2009-04-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.
	* configure.ac (AC_CONFIG_MACRO_DIR), Makefile.am (ACLOCAL_AMFLAGS):
	Add m4 dir as automake includes, as required by the new libtool.
	[Thanks cwt for the report and test.]

2009-04-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library revision.
	* NEWS, configure.ac:
	=== Version 0.2.1 ===

2009-04-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie-0.2.pc.in: Remove blank Requires: line.

2009-04-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/alpha-map.h, datrie/trie.h: Revise documentation.

2009-04-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/fileutils.h, datrie/fileutils.c
	(make_full_path, file_open, file_length): Remove unused codes.
	* datrie/triedefs.h (TrieIOMode): Remove unused typedef.

2009-04-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/Makefile.am, datrie/libdatrie.def -> datrie/libdatrie.map:
	Replace libtool symbol exports with symbol versioning, to ease
	upgrading across SONAME.

2009-03-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix gcc warnings.

	* tools/trietool.c (conv_to_alpha): Cast 'out_p' pointer before